[package]
name = "bury"
version = "0.1.0"
edition = "2021"
authors = ["Paolo Rechia <paolorechia@gmail.com>"]
description = "A blazingly fast dead code detector for Python and TypeScript using reachability analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paolorechia/bury"
keywords = ["dead-code", "analyzer", "linter", "reachability", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"

# Tree-sitter for parsing
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"

# File system operations
ignore = "0.4"  # Respects .gitignore
walkdir = "2.4"

# Parallelization
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "bury"
path = "src/lib.rs"

[[bin]]
name = "bury"
path = "src/main.rs"
