[workspace]
members = [
    "crates/shared",
    "crates/bury",
    "crates/complexity",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Paolo Rechia <paolorechia@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/neural-garage/tools"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"

# Tree-sitter for parsing
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"

# File system operations
ignore = "0.4"
walkdir = "2.4"

# Parallelization
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
once_cell = "1.19"

# Dev dependencies (also in workspace.dependencies for sharing)
tempfile = "3.8"
