[package]
name = "neural-complexity"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code complexity analyzer for Python and TypeScript using cyclomatic and cognitive complexity metrics"
keywords = ["complexity", "analyzer", "cyclomatic", "cognitive", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/neural-garage/tools"
documentation = "https://docs.rs/neural-complexity"

[dependencies]
# Internal shared library
neural-shared = { version = "0.1.0", path = "../shared" }

# CLI
clap = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "neural_complexity"
path = "src/lib.rs"

[[bin]]
name = "neural-complexity"
path = "src/main.rs"
